7129618: assert(obj_node->eqv_uncast(obj),"");

Relax verification and locks elimination checks for new implementation (EliminateNestedLocks).

Reviewed-by: iveresov